@@ -1,7 +1,11 @@
 package com.example.leetsgarden.service;
 
-import com.example.leetsgarden.domain.*;
+import com.example.leetsgarden.domain.Attendance;
+import com.example.leetsgarden.domain.Meeting;
+import com.example.leetsgarden.domain.UserMeeting;
+import com.example.leetsgarden.domain.WeeklyMeetings;
 import com.example.leetsgarden.dto.request.AddWeeklyMeetingsRequest;
+import com.example.leetsgarden.dto.response.WeeklyMeetingsResponse;
 import com.example.leetsgarden.repository.AttendanceRepository;
 import com.example.leetsgarden.repository.MeetingRepository;
 import com.example.leetsgarden.repository.WeeklyMeetingsRepository;
@@ -11,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -37,12 +40,13 @@ public class WeeklyMeetingsService {
         return weeklyMeetings;
     }
 
-    public List<WeeklyMeetings> findAll() {
+    public List<WeeklyMeetingsResponse> findAll() {
         LocalDate now = LocalDate.now();
         List<WeeklyMeetings> weeklyMeetingsList = weeklyMeetingsRepository.findAll();
 
         return weeklyMeetingsList.stream()
-                .filter(s -> s.getMeetingDate().isEqual(now) || s.getMeetingDate().isAfter(now))
-                .collect(Collectors.toList());
+                .filter(s -> !s.getMeetingDate().isBefore(now))
+                .map(WeeklyMeetingsResponse::new)
+                .toList();
     }
 }
